# crow-hello

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md
docs/: blog-crow-hello.md  voice-guide.md
docs/superpowers/plans/: 2026-06-12-crow-hello.md
docs/superpowers/specs/: 2026-06-12-crow-hello-design.md
src/: main.cpp
terraform/: .gitignore  main.tf  outputs.tf  secrets.tfvars.example  variables.tf
